@@ -4,11 +4,11 @@
 Exception trace for Poly/ML 5.5.1, using regular Isabelle output.
 *)
 
-fun exception_trace e =
+fun print_exception_trace exn_message e =
   PolyML.Exception.traceException
     (e, fn (trace, exn) =>
       let
-        val title = "Exception trace - " ^ ML_Compiler.exn_message exn;
+        val title = "Exception trace - " ^ exn_message exn;
         val _ = tracing (cat_lines (title :: trace));
       in reraise exn end);
 
