@@ -36,6 +36,7 @@ val exn_info = {exn_position = exn_position, pretty_exn = pretty_exn};
 val exn_messages_ids = Runtime.exn_messages_ids exn_info;
 val exn_messages = Runtime.exn_messages exn_info;
 val exn_message = Runtime.exn_message exn_info;
+fun exn_trace e = print_exception_trace exn_message e;
 
 
 (* parse trees *)
@@ -165,7 +166,7 @@ fun eval verbose pos toks =
       | SOME code =>
           apply_result
             ((code
-              |> Runtime.debugging
+              |> Runtime.debugging exn_message
               |> Runtime.toplevel_error (err o exn_message)) ())));
 
 
